tests/baselines/reference/accessorParameterAccessibilityModifier.errors.txt
==== tests/cases/compiler/accessorParameterAccessibilityModifier.ts (2 errors) ====
    // target: es5
    
    class C {
        set X(public v) { }
              ~~~~~~
!!! accessorParameterAccessibilityModifier.ts(4,11): error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
        static set X(public v2) { }
                     ~~~~~~
!!! accessorParameterAccessibilityModifier.ts(5,18): error TS1040: Parameter property declarations can only be used in a non-ambient constructor declaration.
    }